fix page overflow

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -74,13 +74,15 @@ p.menu-label {
   background-color: #f3f6ff;
   border-radius: 40px;
   padding: 2rem 1.5rem;
+  // margin: 0 auto 0 auto;
+  overflow: hidden;
 }
 
 @import '~bulma';
 
-// :root {
-//     scroll-behavior: smooth;
-// }
+:root {
+  scroll-behavior: smooth;
+}
 
 // Page transition animation
 
